use git in maven scm config

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>aws-sqs-trigger</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>AWS SQS trigger Plugin</name>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
@@ -28,10 +28,10 @@
       </developer>
     </developers> -->
 
-    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
-        <connection>scm:git:https://github.com/${gitHubRepo}</connection>
-        <developerConnection>scm:git:https://github.com/${gitHubRepo}</developerConnection>
-        <tag>${scmTag}</tag>
+    <scm>
+        <connection>scm:git:git://github.com/${gitHubRepo}</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}</developerConnection>
+        <tag>aws-sqs-trigger-1.0</tag>
         <url>https://github.com/${gitHubRepo}</url>
     </scm>
     <properties>
