--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>aws-sqs-trigger</artifactId>
-    <version>1.2</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <name>AWS SQS trigger Plugin</name>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
@@ -32,11 +32,11 @@
     <scm>
         <connection>scm:git:git://github.com/${gitHubRepo}</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}</developerConnection>
-        <tag>aws-sqs-trigger-1.2</tag>
+        <tag>aws-sqs-trigger-1.0</tag>
         <url>https://github.com/${gitHubRepo}</url>
     </scm>
     <properties>
-        <revision>1.2</revision>
+        <revision>1.3</revision>
         <changelist>-SNAPSHOT</changelist>
         <jenkins.version>2.263.1</jenkins.version>
         <java.level>8</java.level>
