--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,11 @@
     <properties>
         <revision>1.3</revision>
         <changelist>-SNAPSHOT</changelist>
+        <bom>2.263</bom>
         <jenkins.version>2.263.1</jenkins.version>
         <java.level>8</java.level>
         <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
-        <aws-java-sdk.version>1.12.70</aws-java-sdk.version>
+        <aws-java-sdk.version>1.12.287-357.vf82d85a_6eefd</aws-java-sdk.version>
         <aws-credentials.version>1.32</aws-credentials.version>
     </properties>
 
@@ -49,15 +50,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.263.x</artifactId>
-                <version>950.v396cb834de1e</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-bom</artifactId>
-                <version>${aws-java-sdk.version}</version>
+                <artifactId>bom-${bom}.x</artifactId>
+                <version>984.vb5eaac999a7e</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -75,6 +69,11 @@
             <version>${aws-java-sdk.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jenkins-ci.plugins.aws-java-sdk</groupId>
+            <artifactId>aws-java-sdk-sqs</artifactId>
+            <version>${aws-java-sdk.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
         </dependency>
@@ -82,10 +81,6 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>aws-credentials</artifactId>
             <version>${aws-credentials.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-sqs</artifactId>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
